Fixed alignment of list items

--- a/app/modules/media_features/media_features.module.less
+++ b/app/modules/media_features/media_features.module.less
@@ -12,12 +12,11 @@
       li{
         line-height: 25px;
         font-size: 14px;
-        padding-left: 0.7em;
-        text-indent: -.7em;
+        padding-left: 1.1em;
         white-space: nowrap;
         overflow: hidden;
         display: inline-block;
-        width: 32%;
+        width: 33%;
         text-overflow: ellipsis;
       }
       li:before{
